--- a/index.html
+++ b/index.html
@@ -4,8 +4,8 @@
 	<title></title>
 </head>
 <body>
-	<h1>------------------------- module-4 solution ------------------------</h1>
-  <h2>-------------------Right click here and inspect element to check the console out--------------------</h2>
+	<h1> module-4 solution </h1>
+  <h2>Right click --> inspect --> console </h2>
 	<script src="Module.js" ="text/javascript">
 	
 	</script>
