--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html>
 <head>
 	<title></title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<h1> module-4 solution </h1>
-  <h2>Right click --> inspect --> console </h2>
+    <h2>Right click --> inspect --> console </h2>
 	<script src="Module.js" ="text/javascript">
 	
 	</script>
